Address PR review feedback: improve placeholder page and infra
- Add favicon link (empty data URI) to prevent 404 errors
- Add meta description for SEO
- Improve color contrast (#888→#aaa) for WCAG accessibility
- Replace period with hyphen in S3 bucket name for TLS compatibility
- Use S3BucketOrigin.withOriginAccessControl instead of deprecated OAI
- Add Cache-Control headers for optimized CloudFront caching
- Remove unnecessary 404→200 error response

--- a/infra/placeholder/index.html
+++ b/infra/placeholder/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Specboard – collaborative specification and planning, coming soon.">
+	<link rel="icon" href="data:,">
 	<title>Specboard</title>
 	<style>
 		* {
@@ -28,7 +30,7 @@
 		}
 		p {
 			font-size: 1.25rem;
-			color: #888;
+			color: #aaa;
 		}
 	</style>
 </head>
